output.css
/* ... */
/*
Correct the cursor style of increment and decrement buttons in Safari.
*/

::-webkit-inner-spin-button,
::-webkit-outer-spin-button {
  height: auto;
}

/*
1. Correct the odd appearance in Chrome and Safari.
2. Correct the outline style in Safari.
*/

[type='search'] {
  -webkit-appearance: textfield;
  /* 1 */
  outline-offset: -2px;
  /* 2 */
}

/*
Remove the inner padding in Chrome and Safari on macOS.
*/

::-webkit-search-decoration {
  -webkit-appearance: none;
}

/*
1. Correct the inability to style clickable types in iOS and Safari.
2. Change font properties to `inherit` in Safari.
*/

::-webkit-file-upload-button {
  -webkit-appearance: button;
  /* 1 */
  font: inherit;
  /* 2 */
}

/*
Add the correct display in Chrome and Safari.
*/

summary {
  display: list-item;
}

/*
Removes the default spacing and border for appropriate elements.
*/

blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre {
  margin: 0;
}

fieldset {
  margin: 0;
  padding: 0;
}

legend {
  padding: 0;
}

ol,
ul,
menu {
  list-style: none;
  margin: 0;
  padding: 0;
}

/*
Reset default styling for dialogs.
*/

dialog {
  padding: 0;
}

/*
Prevent resizing textareas horizontally by default.
*/

textarea {
  resize: vertical;
}

/*
1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
2. Set the default placeholder color to the user's configured gray 400 color.
*/

input::-moz-placeholder, textarea::-moz-placeholder {
  opacity: 1;
  /* 1 */
  color: #9ca3af;
  /* 2 */
}

input::placeholder,
textarea::placeholder {
  opacity: 1;
  /* 1 */
  color: #9ca3af;
  /* 2 */
}

/*
Set the default cursor for buttons.
*/

button,
[role="button"] {
  cursor: pointer;
}

/*
Make sure disabled buttons don't get the pointer cursor.
*/

:disabled {
  cursor: default;
}

/*
1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
   This can trigger a poorly considered lint error in some tools but is included by design.
*/

img,
svg,
video,
canvas,
audio,
iframe,
embed,
object {
  display: block;
  /* 1 */
  vertical-align: middle;
  /* 2 */
}

/*
Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
*/

img,
video {
  max-width: 100%;
  height: auto;
}

/* Make elements with the HTML hidden attribute stay hidden by default */

[hidden]:where(:not([hidden="until-found"])) {
  display: none;
}

:root {
  --primary-color:#9614d0;
  --secondary-color:#11001c;
  --highlight:#ff10f0;
}

* {
  text-shadow: 0 0 2rem white;
  scroll-behavior: smooth;
  border-color: var(--highlight);
  font-family: Poppins, sans-serif
}

.nav-item{
  display: none;
}

@media (min-width: 768px){
  .nav-item{
    display: inline-flex;
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 1024px){
  .nav-item{
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

.menu-item{
  background-color: var(--secondary-color);
  padding: 1rem;
}

.rain {
  writing-mode: vertical-lr;
  text-orientation: upright;
  position: absolute;
  z-index: 40;
  height: 4rem
}

@keyframes rain{
  0%{
    transform: translateY(-50px);
  }

  100%{
    transform: translateY(calc(100vh + 50px));
    opacity: 0;
  }
}

.rain{
  animation: rain 1.25s linear infinite;
  color: var(--primary-color);
}

.text-effect {
  text-shadow: 0.05em 0 0 red, 
        -0.025em -0.05em 0 green, 
        0.025em 0.05em 0 blue,
        0 0 2rem white
}

@keyframes flicker{
  20%{
    opacity: 1;
  }

  24%{
    opacity: 0.5;
  }

  28%{
    opacity: 1;
  }

  30%{
    opacity: 0;
  }

  40%{
    opacity: 0;
  }

  50%{
    opacity: 1;
  }

  55%{
    opacity: 1;
  }
}

.text-effect{
  animation: flicker 3s infinite;
}

/* Sections */

.section{
  position: relative;
  width: 80%;
  border-radius: 0.5rem;
  border-width: 2px;
  background-color: var(--secondary-color);
  padding: 1rem;
  text-align: center;
  opacity: 0;
  --tw-shadow: 0 0 4rem #ff10f0;
  --tw-shadow-colored: 0 0 4rem var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  --tw-shadow-color: var(--highlight);
  --tw-shadow: var(--tw-shadow-colored);
}

.section-title{
  margin-bottom: 1rem;
  width: 100%;
  -webkit-user-select: none;
     -moz-user-select: none;
          user-select: none;
  border-radius: 0.5rem;
  border-width: 2px;
  border-color: var(--primary-color);
  padding: 1rem;
  font-size: 2.25rem;
  line-height: 2.5rem;
  --tw-shadow: 0 0 4rem #9614d0;
  --tw-shadow-colored: 0 0 4rem var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  --tw-shadow-color: var(--primary-color);
  --tw-shadow: var(--tw-shadow-colored);
}

@media (min-width: 640px){
  .section-title{
    font-size: 3.75rem;
    line-height: 1;
  }
}

.left-slide{
  --tw-translate-x: 100%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 500ms;
}

.right-slide{
  --tw-translate-x: -100%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 500ms;
}
/* ... */

